// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pnpm icon render custom class 1`] = `

<div>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewbox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="lucide lucide-pnpm lucide-Pnpm custom-class"
    aria-hidden="true"
  >
    <path
      d="M2 2V8.24937H8.24937V2H2ZM8.87437 2V8.24937H15.1244V2H8.87437ZM15.7506 2V8.24937H22V2H15.7506ZM15.7506 8.87437V15.1237H22V8.87437H15.7506Z"
      stroke-width="0"
      fill="#F8AB00"
    >
    </path>
    <path
      d="M8.87437 8.87439V15.1238H15.1244V8.87439H8.87437ZM2 15.7488V21.9988H8.24937V15.7488H2ZM8.87437 15.7488V21.9988H15.1244V15.7488H8.87437ZM15.7506 15.7488V21.9988H22V15.7488H15.7506Z"
      stroke-width="0"
      fill="#4C4C4C"
    >
    </path>
  </svg>
</div>

`;

exports[`pnpm icon render default 1`] = `

<div>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewbox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="lucide lucide-pnpm lucide-Pnpm"
    aria-hidden="true"
  >
    <path
      d="M2 2V8.24937H8.24937V2H2ZM8.87437 2V8.24937H15.1244V2H8.87437ZM15.7506 2V8.24937H22V2H15.7506ZM15.7506 8.87437V15.1237H22V8.87437H15.7506Z"
      stroke-width="0"
      fill="#F8AB00"
    >
    </path>
    <path
      d="M8.87437 8.87439V15.1238H15.1244V8.87439H8.87437ZM2 15.7488V21.9988H8.24937V15.7488H2ZM8.87437 15.7488V21.9988H15.1244V15.7488H8.87437ZM15.7506 15.7488V21.9988H22V15.7488H15.7506Z"
      stroke-width="0"
      fill="#4C4C4C"
    >
    </path>
  </svg>
</div>

`;
